[package]
name = "varcram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = [ "derive" ] }
serde_bytes = { version = "0.11.7" }

[dev-dependencies]
rand = { version = "0.8.5" }